Updates to latest version of ParseList by Cyrus Patel.  This fixes the problem with filenames with multiple spaces. sr=darin, b=195956